crates/tokmd-tokeignore/tests/snapshots/snapshot_templates__cpp_project.snap
---
source: crates/tokmd-tokeignore/tests/snapshot_templates.rs
expression: content
---
# .tokeignore (C++)
build/
**/build/
cmake-build-*/
**/cmake-build-*/
out/
**/out/
.cache/
**/.cache/

# tokmd outputs
.runs/
**/.runs/
