crates/tokmd-tokeignore/tests/snapshots/snapshot_templates__go_project.snap
---
source: crates/tokmd-tokeignore/tests/snapshot_templates.rs
expression: content
---
# .tokeignore (Go)
vendor/
**/vendor/
bin/
**/bin/

# tokmd outputs
.runs/
**/.runs/
