crates/tokmd-tokeignore/tests/snapshots/snapshot_templates__node_project.snap
---
source: crates/tokmd-tokeignore/tests/snapshot_templates.rs
expression: content
---
# .tokeignore (Node)
node_modules/
**/node_modules/
dist/
**/dist/
out/
**/out/
build/
**/build/
coverage/
**/coverage/

# tokmd outputs
.runs/
**/.runs/
